--- a/Week 10/requirements.txt
+++ b/Week 10/requirements.txt
@@ -1,8 +1,6 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
-allennlp==2.10.1
-allennlp-models==2.10.1
 annotated-types @ file:///C:/b/abs_0dmaoyhhj3/croot/annotated-types_1709542968311/work
 anyio @ file:///C:/b/abs_31grv7a7bl/croot/anyio_1729121290992/work
 argcomplete==1.10.0
@@ -13,17 +11,13 @@ async-lru @ file:///C:/b/abs_e0hjkvwwb5/croot/async-lru_1699554572212/work
 async-timeout==5.0.1
 attrs @ file:///C:/b/abs_89hmquz5ga/croot/attrs_1734533130810/work
 babel @ file:///C:/b/abs_ffzt1bmjth/croot/babel_1737454394148/work
-base58==2.1.1
 beautifulsoup4==4.8.0
 bleach @ file:///C:/b/abs_925i9psm3u/croot/bleach_1732292896852/work
 blis==0.7.11
-boto3==1.38.3
-botocore==1.38.3
 Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
-cached-path==1.1.6
 cachetools==5.5.2
 catalogue @ file:///C:/b/abs_0d918n68qi/croot/catalogue_1703688198988/work
-certifi @ file:///C:/b/abs_8a944p1_gn/croot/certifi_1738623753421/work/certifi
+certifi @ file:///C:/b/abs_3beajm7umk/croot/certifi_1745939228545/work/certifi
 cffi @ file:///C:/b/abs_29_b57if3f/croot/cffi_1736184144340/work
 chardet==3.0.4
 charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
@@ -31,22 +25,21 @@ click==7.1.2
 cloudpathlib @ file:///C:/b/abs_049y1lewoy/croot/cloudpathlib_1704812313028/work
 colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
 comm @ file:///C:/b/abs_67a8058udb/croot/comm_1709322909844/work
-commonmark==0.9.1
 confection @ file:///C:/b/abs_dcftb4qo2h/croot/confection_1703694738925/work
 conllu==4.4.2
 contourpy==1.3.1
 cycler==0.12.1
 cymem==2.0.11
 cytoolz==1.0.1
-datasets==2.10.1
+datasets==3.5.0
 debugpy @ file:///C:/b/abs_bf9oo2vhxp/croot/debugpy_1736269476451/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-dill==0.3.6
-docker-pycreds==0.4.0
+dill==0.3.8
 docx2txt==0.8
 EbookLib==0.17.1
 emoji==2.14.1
+en_core_web_lg @ file:///croot/spacy-models_1731393801375/work/en_core_web_lg
 en_core_web_md @ file:///croot/spacy-models_1731393801375/work/en_core_web_md
 en_core_web_sm @ file:///croot/spacy-models_1731393801375/work/en_core_web_sm
 en_ner_eco_biobert @ https://github.com/nleguillarme/taxonerd/releases/download/v1.5.4/en_ner_eco_biobert-1.1.0.tar.gz#sha256=fead9489f45649dd8ebe77fc5f2e7fe3cff227ae530ca15520d209a0e2ef8e8b
@@ -56,38 +49,24 @@ en_ner_eco_md_weak @ https://github.com/nleguillarme/taxonerd/releases/download/
 exceptiongroup @ file:///C:/b/abs_c5h1o1_b5b/croot/exceptiongroup_1706031441653/work
 executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
 extract-msg==0.23.1
-fairscale==0.4.6
 fastcoref==2.1.6
 fastjsonschema @ file:///C:/b/abs_4ev90296ly/croot/python-fastjsonschema_1731939386416/work
-filelock==3.7.1
+filelock==3.18.0
 floret==0.10.5
 fonttools==4.56.0
 frozenlist==1.5.0
 fsspec==2024.12.0
-ftfy==6.3.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-api-core==2.24.2
-google-auth==2.39.0
-google-cloud-core==2.4.3
-google-cloud-storage==2.19.0
-google-crc32c==1.7.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
 h11 @ file:///C:/b/abs_1czwoyexjf/croot/h11_1706652332846/work
-h5py==3.13.0
 httpcore @ file:///C:/b/abs_55n7g233bw/croot/httpcore_1706728507241/work
 httpx @ file:///C:/b/abs_43e135shby/croot/httpx_1723474830126/work
-huggingface-hub==0.30.2
+huggingface-hub==0.29.3
 idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
 IMAPClient==2.1.0
-iniconfig==2.1.0
 ipykernel @ file:///C:/b/abs_6c9ggygp01/croot/ipykernel_1737660720620/work
 ipython @ file:///C:/b/abs_8eyhzleyrk/croot/ipython_1734548134403/work
 jedi @ file:///C:/b/abs_3a2kbnlclc/croot/jedi_1733987412687/work
 jellyfish==1.1.3
 Jinja2 @ file:///C:/b/abs_920kup4e6u/croot/jinja2_1741711580669/work
-jmespath==1.0.1
 joblib==1.4.2
 json5 @ file:///C:/b/abs_743lprxrv5/croot/json5_1730786818336/work
 jsonschema @ file:///C:/b/abs_394_t6__xq/croot/jsonschema_1728486718320/work
@@ -104,7 +83,6 @@ jupyterlab_server @ file:///C:/b/abs_fdi5r_tpjc/croot/jupyterlab_server_17258653
 kiwisolver==1.4.8
 langcodes @ file:///opt/conda/conda-bld/langcodes_1643477751144/work
 language_data==1.3.0
-lmdb==1.6.2
 lxml==5.3.1
 marisa-trie==1.2.1
 markdown-it-py @ file:///C:/b/abs_a5bfngz6fu/croot/markdown-it-py_1684279915556/work
@@ -116,10 +94,9 @@ mistune @ file:///C:/b/abs_77yql3poyz/croot/mistune_1741124004410/work
 mkl-service==2.4.0
 mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
 mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
-more-itertools==10.7.0
 mpmath==1.3.0
 multidict==6.2.0
-multiprocess==0.70.14
+multiprocess==0.70.16
 murmurhash @ file:///C:/b/abs_f1_1p5yg6_/croot/murmurhash_1741707831116/work
 nbclient @ file:///C:/b/abs_a09c4t3h8x/croot/nbclient_1741124030330/work
 nbconvert @ file:///C:/b/abs_c27_60dzt8/croot/nbconvert-meta_1741191385337/work
@@ -137,28 +114,19 @@ packaging @ file:///C:/b/abs_3by6s2fa66/croot/packaging_1734472138782/work
 pandas==2.2.3
 pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
 parso @ file:///C:/b/abs_834b4mj92b/croot/parso_1733963322289/work
-pathlib_abc==0.1.1
-pathtools==0.1.2
-pathy==0.11.0
 pdfminer.six==20191110
 pillow==11.1.0
 platformdirs @ file:///C:/b/abs_b6z_yqw_ii/croot/platformdirs_1692205479426/work
 plottable==0.1.5
-pluggy==1.5.0
 preshed @ file:///C:/ci/preshed_1651222371453/work
 prometheus_client @ file:///C:/b/abs_e7l07zkc4b/croot/prometheus_client_1731961599071/work
-promise==2.3
 prompt-toolkit @ file:///C:/b/abs_68uwr58ed1/croot/prompt-toolkit_1704404394082/work
 propcache==0.3.1
-proto-plus==1.26.1
-protobuf==3.20.3
+protobuf==6.30.2
 psutil @ file:///C:/b/abs_b5gv3mn55h/croot/psutil_1736371546320/work
 pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-py-rouge==1.1
 pyalex==0.18
 pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
 pybind11==2.13.6
 pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 pycryptodome==3.22.0
@@ -171,7 +139,6 @@ pypdf==5.4.0
 pyphen==0.17.2
 pysbd==0.3.4
 PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
-pytest==8.3.5
 python-dateutil @ file:///C:/b/abs_3au_koqnbs/croot/python-dateutil_1716495777160/work
 python-json-logger @ file:///C:/b/abs_0cm_mnox0z/croot/python-json-logger_1734370042436/work
 python-pptx==0.6.18
@@ -183,27 +150,18 @@ pyzmq @ file:///C:/b/abs_f3yte6j5yn/croot/pyzmq_1734711069724/work
 referencing @ file:///C:/b/abs_09f4hj6adf/croot/referencing_1699012097448/work
 regex==2024.11.6
 requests @ file:///C:/b/abs_c3508vg8ez/croot/requests_1731000584867/work
-responses==0.18.0
 rfc3339-validator @ file:///C:/b/abs_ddfmseb_vm/croot/rfc3339-validator_1683077054906/work
 rfc3986-validator @ file:///C:/b/abs_6e9azihr8o/croot/rfc3986-validator_1683059049737/work
 rich==12.6.0
 rpds-py @ file:///C:/b/abs_0c6z5kcdb6/croot/rpds-py_1736545465023/work
-rsa==4.9.1
-s3transfer==0.12.0
-sacremoses==0.1.1
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.10.1
 scispacy==0.5.4
 Send2Trash @ file:///C:/b/abs_7e73ol18dl/croot/send2trash_1736542724140/work
-sentencepiece==0.2.0
-sentry-sdk==2.27.0
-setproctitle==1.3.5
 shellingham @ file:///C:/b/abs_c3l_fe1lnk/croot/shellingham_1669142179061/work
-shortuuid==1.0.13
 six @ file:///tmp/build/80754af9/six_1644875935023/work
 smart-open @ file:///C:/ci/smart_open_1651235038100/work
-smmap==5.0.2
 sniffio @ file:///C:/b/abs_3akdewudo_/croot/sniffio_1705431337396/work
 sortedcontainers==2.4.0
 soupsieve @ file:///C:/b/abs_bbsvy9t4pl/croot/soupsieve_1696347611357/work
@@ -216,10 +174,8 @@ SpeechRecognition==3.8.1
 srsly @ file:///C:/b/abs_610qoxca56/croot/srsly_1741858013545/work
 stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
 stanza==1.10.1
-sympy==1.13.3
+sympy==1.13.1
 taxonerd @ file:///C:/Users/lbeln/taxonerd
-tensorboardX==2.6.2.2
-termcolor==1.1.0
 terminado @ file:///C:/b/abs_25nakickad/croot/terminado_1671751845491/work
 textacy==0.13.0
 textract==1.6.5
@@ -230,8 +186,7 @@ tinycss2 @ file:///C:/b/abs_df38owi5ma/croot/tinycss2_1738337725183/work
 tokenizers==0.21.1
 tomli @ file:///C:/Windows/TEMP/abs_ac109f85-a7b3-4b4d-bcfd-52622eceddf0hy332ojo/croots/recipe/tomli_1657175513137/work
 toolz==1.0.0
-torch==2.7.0
-torchvision==0.13.1
+torch==2.6.0
 tornado @ file:///C:/b/abs_7cyu943ybx/croot/tornado_1733960510898/work
 tqdm @ file:///C:/b/abs_0eh9b6xugj/croot/tqdm_1738945553987/work
 traitlets @ file:///C:/b/abs_bfsnoxl4pq/croot/traitlets_1718227069245/work
@@ -242,14 +197,12 @@ typing_extensions==4.13.2
 tzdata==2025.2
 tzlocal==1.5.1
 urllib3 @ file:///C:/b/abs_7bst06lizn/croot/urllib3_1737133657081/work
-wandb==0.12.21
 wasabi @ file:///C:/ci/wasabi_1651216439282/work
 wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
 weasel @ file:///C:/b/abs_a2eodvola9/croot/weasel_1704815815095/work
 webencodings==0.5.1
 websocket-client @ file:///C:/b/abs_5dmnxxoci9/croot/websocket-client_1715878351319/work
 win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
-word2number==1.1
 wrapt==1.17.2
 xlrd==1.2.0
 XlsxWriter==3.2.2
